# extract-text-mask

./: .gitignore  main.py  pyproject.toml
