[project]
name = "teste"
version = "0.1.0"
description = ""
authors = [{ name = "RobertWsp", email = "sousarobert854@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["paddleocr (>=2.10.0,<3.0.0)", "paddlepaddle (>=2.6.2,<3.0.0)", "setuptools (>=77.0.1,<78.0.0)", "easyocr (>=1.7.2,<2.0.0)", "pytesseract (>=0.3.13,<0.4.0)", "pillow (>=11.1.0,<12.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
